// * explanations can be found at https://dbdocs.io/theppitak.m/Lotto-Journal
// * schema version: post-migration 000007 (target state)
// * ground truth for current DB state: apps/api/migrations/ (all 000001–000007)

// USERS
Table users {
  id uuid [pk, default: `gen_random_uuid()`]
  line_user_id varchar [unique, not null]
  status account_status [default: 'active']
  language varchar(10) [not null, default: 'en']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

// WEBHOOK IDEMPOTENCY
Table webhook_events {
  event_id varchar [pk]           // LINE webhookEventId — exact once processing
  processed_at timestamp [not null, default: `now()`]
}

// FILE DATA
Table files {
  id uuid [pk, default: `gen_random_uuid()`]
  owner_id uuid [ref: > users.id]
  file_path varchar [unique, not null]
  file_type varchar
  created_at timestamp [default: `now()`]
}

// LOTTERY DATA
Table tickets {
  id uuid [pk, default: `gen_random_uuid()`]
  owner_id uuid [ref: > users.id]
  draw_id uuid [ref: > draws.id]
  type lottery_type
  number varchar(6)
  quantity int4 [default: 1]
  tickets_file_id uuid [ref: - files.id, null]
  is_checked boolean [default: false]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table draws {
  id uuid [pk, default: `gen_random_uuid()`]
  draw_date date [unique, not null]
  is_verified boolean [default: false]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table draw_results {
  id uuid [pk, default: `gen_random_uuid()`]
  draw_id uuid [ref: > draws.id]
  prize_category prize_type
  winning_number varchar(12)
  prize_amount int4

  // prevent duplicate insert
  indexes {
    (draw_id, prize_category, winning_number) [unique]
  }
}

Table user_winnings {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [ref: > users.id]    // [FOUND-IN-PASSING] missing from migration 000001 SQL; added in 000002
  ticket_id uuid [ref: > tickets.id]
  draw_result_id uuid [ref: > draw_results.id]
  prize_money int4
  created_at timestamp [default: `now()`]

  // prevent duplicate insert
  indexes {
    (ticket_id, draw_result_id) [unique]
  }
}

Table notification_logs {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, ref: > users.id]
  line_user_id varchar [not null]
  notification_type notification_type [not null]
  draw_id uuid [ref: > draws.id, null]
  status notification_status [not null]
  error_message text [null]
  created_at timestamp [default: `now()`]
}


// ENUM
enum account_status {
  active
  inactive   // user unfollowed LINE OA (unfollow event)
  suspended  // admin action — misbehaving or bot account
}

enum lottery_type {
  N3 // 3-digit lottery
  L6 // 6-digit lottery
}

enum prize_type {
  l6_first
  l6_second
  l6_third
  l6_fourth
  l6_fifth
  l6_last2
  l6_last3f
  l6_last3b
  l6_near_first
  n3_straight_three
  n3_shuffle
  n3_straight_two
  n3_special
}

enum notification_status {
  success
  failed
}

enum notification_type {
  welcome
  ticket_submitted
  ticket_list
  draw_result
  language_changed
  help_add
  help_notify
}
